# Sa2VA

./: pyproject.toml
projects/sa2va/gradio/: app.py  app_utils.py
