[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sa2va"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "decord==0.6.0",
    "flash-attn==2.7.3",
    "google-genai>=1.25.0",
    "gradio>=5.49.1",
    "hydra-core>=1.3.2",
    "octorun>=0.1.2",
    "openai>=1.97.1",
    "pycocotools>=2.0.10",
    "pycocoevalcap",
    "scikit-learn",
    "setuptools",
    "tfd-utils>=0.2.4",
    "timm==1.0.17",
    "torch>=2.6.0",
    "xtuner==0.1.23",
    "validators",
    "xlsxwriter",
    "tabulate",
    "sty",
    "portalocker",
    "moviepy==1.0.3",
    "datetime",
    "qwen_vl_utils",
]

[project.optional-dependencies]
latest = [
  "transformers==4.56.2",
  "peft==0.17.1",
]
legacy = [
  "transformers==4.49.0",
  "peft==0.11.1",
]

[tool.setuptools]
packages = ["projects", "vlm", "third_parts", "tools"]

[tool.uv]
link-mode = "copy"
conflicts = [
    [
      { extra = "latest" },
      { extra = "legacy" },
    ],
]

[tool.uv.pip]
find-links = [
    "https://huggingface.co/lldacing/flash-attention-windows-wheel/resolve/main"
]
extra-index-url = [
    "https://download.pytorch.org/whl/cu124"
]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu12" },
]
torchvision = [
  { index = "pytorch-cu12" },
]
flash-attn = { url = "https://huggingface.co/lldacing/flash-attention-windows-wheel/resolve/main/flash_attn-2.7.4+cu124torch2.6.0cxx11abiFALSE-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32'" }

[[tool.uv.index]]
name = "pytorch-cu12"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.dependency-metadata]]
name = "mmengine"
version = "0.10.7"
requires-dist = [
  "addict", "matplotlib", "numpy", "opencv-python-headless", 
  "pyyaml", "rich", "termcolor", "yapf",
]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.3"
requires-dist = ["torch", "einops"]